<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_fragment_framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/profile_fragment_scrollview"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">


                <ImageView
                    android:id="@+id/header_cover_image"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@color/primary_dark"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/user_description"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_name"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:maxLines="5"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp"
                    />

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_photo"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:textColor="?attr/editTextColor"
                    android:textSize="26sp"/>

                <ImageButton
                    android:id="@+id/button_profile_radar"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/user_description"
                    android:layout_centerHorizontal="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="?attr/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_people_black_24dp"
                    />

                <TextView
                    android:id="@+id/tv_profile_radar"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_description"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="39dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp"/>

                <ImageButton
                    android:id="@+id/button_profile_music_tag"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_below="@+id/user_description"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@+id/user_profile_photo"
                    android:layout_toStartOf="@+id/user_profile_photo"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:backgroundTint="?attr/colorPrimaryDark"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:tint="?attr/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_music_circle_black_24dp"/>

                <TextView
                    android:id="@+id/tv_profile_menu"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tv_profile_radar"
                    android:layout_alignBottom="@+id/tv_profile_radar"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:layout_toEndOf="@+id/user_profile_photo"
                    android:layout_toRightOf="@+id/user_profile_photo"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/more"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp"/>

                <ImageButton
                    android:id="@+id/button_profile_menu"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignLeft="@+id/tv_profile_menu"
                    android:layout_alignStart="@+id/tv_profile_menu"
                    android:layout_below="@+id/user_description"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="?attr/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_more_horiz_black_24dp"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/music_history_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_profile_music_tag"
                    android:layout_marginTop="24dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    android:padding="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/com_facebook_profile_picture_blank_square"
                    app:civ_border_color="#FFFFFFFF"
                    app:civ_border_width="4dp"/>

                <TextView
                    android:id="@+id/tv_profile_music_tag"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/tv_profile_radar"
                    android:layout_alignBottom="@+id/tv_profile_radar"
                    android:layout_toLeftOf="@+id/user_profile_photo"
                    android:layout_toStartOf="@+id/user_profile_photo"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/rock"
                    android:textColor="@color/secondary_text"
                    android:textSize="13sp"/>

            </RelativeLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>
