...
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity">

    <!-- TabLayout to see the current page-->

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/color_accent"
        app:tabSelectedTextColor="@color/color_accent"
...
            android:text="@string/tabProfile"/>

    </android.support.design.widget.TabLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/pagerMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>

